feat: agregada API de paginacion y eliminado swagger inicial
